Added MongoDB connection string to .env

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "101376617_comp3123_assignment1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,5 +21,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "description": ""
 }
