--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "dilara",
@@ -17,10 +17,10 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
-    "mongoose-bcrypt": "^1.11.0"
+    "mongoose-bcrypt": "^1.11.0",
+    "nodemon": "^3.1.7" 
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
   },
   "description": ""
 }
